# Chi-Telegram-Inline-Bot-Neo

./: .gitignore  .mergify.yml  Cargo.toml  Dockerfile  README.md  bacon.toml  fly.toml
.github/workflows/: analysis.yml  deploy.yml  test.yml
src/: booking.rs  corpus.rs  errors.rs  handlers.rs  main.rs  migrate.rs  seller.rs  stats.rs  utils.rs
