[package]
name = "chi-tg-inline-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
either = "1.6"
futures-util = "0.3"
itertools = "0.10"
md5 = "0.7"
mongodb = "2.1"
parking_lot = "0.12"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.7", default-features = false, features = ["ctrlc_handler", "rustls", "auto-send", "macros"] }
teloxide-listener = { git = "https://github.com/PhotonQuantum/teloxide-listener", features = ["webhook"] }
thiserror = "1.0"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.2"
tokio = { version = "1.16", features = ["rt-multi-thread", "macros", "parking_lot"] }