[package]
name = "chi-tg-inline-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
either = "1.13"
futures-util = "0.3"
itertools = "0.14"
md5 = "0.7"
mongodb = "2.8"
parking_lot = "0.12"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.7", default-features = false, features = ["ctrlc_handler", "rustls", "auto-send", "macros", "dispatching2"] }
teloxide-listener = { version = "0.1.0-beta.1", features = ["webhook"] }
thiserror = "2.0"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "parking_lot"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
